--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,3 +1,9 @@
+.container {
+  background-color:  #a7d723;
+  color: #FFFFFF;
+  margin: 20px auto;
+  font-weight: bold;
+}
 
 .game-board {
   display: flex;
