round corners and add shadows

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,5 +1,5 @@
 .container {
-  background-color:  #a7d723;
+  background-color:  #4cbb16;
   color: #FFFFFF;
   margin: 20px auto;
   font-weight: bold;
