--- a/src/components/Picture/Picture.css
+++ b/src/components/Picture/Picture.css
@@ -1,4 +1,6 @@
 .game-picture { 
-  margin: 10px;
   width: 200px;
+  margin: 10px;
+  border: 2px solid white;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, .5);
 }
