--- a/src/components/Picture/Picture.css
+++ b/src/components/Picture/Picture.css
@@ -4,3 +4,10 @@
   border: 2px solid white;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, .5);
 }
+
+@media only screen and (max-width: 420px) {
+  .game-picture {
+    margin: 10px auto;
+    width: 90%;
+  }
+}
